<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventF55" Id="{153c4384-7150-4309-a66a-c9ecb27c5afc}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventF55
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_10;
END_VAR
VAR_OUTPUT
	sDebug : STRING(200);
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..21] OF AC_Unit_Status;
	stUnit   : AC_Unit_Status;
	i: INT;
	sMsgText: STRING;

END_VAR
VAR RETAIN
	aPrevState : ARRAY[1..21] OF BOOL := [FALSE(*21*)];
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_214.bPresVal;
aUnits[1].sUnitName := 'F55-1 (2-06)';
aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_215.bPresVal;
aUnits[2].sUnitName := 'F55-2 (2-07)';
aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_216.bPresVal;
aUnits[3].sUnitName := 'F55-3 (2-08)';
aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_217.bPresVal;
aUnits[4].sUnitName := 'F55-4 (2-09)';
aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_218.bPresVal;
aUnits[5].sUnitName := 'F55-5 (2-10)';
aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_219.bPresVal;
aUnits[6].sUnitName := 'F55-6 (2-11)';
aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_220.bPresVal;
aUnits[7].sUnitName := 'F55-7 (2-12)';
aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_221.bPresVal;
aUnits[8].sUnitName := 'F55-8 (2-13)';
aUnits[9].bPresVal := FB_Bacnet.StartStopStatus_222.bPresVal;
aUnits[9].sUnitName := 'F55-9 (2-14)';
aUnits[10].bPresVal := FB_Bacnet.StartStopStatus_223.bPresVal;
aUnits[10].sUnitName := 'F55-10 (2-15)';
aUnits[11].bPresVal := FB_Bacnet.StartStopStatus_224.bPresVal;
aUnits[11].sUnitName := 'F55-11 (3-00)';
aUnits[12].bPresVal := FB_Bacnet.StartStopStatus_225.bPresVal;
aUnits[12].sUnitName := 'F55-12 (3-01)';
aUnits[13].bPresVal := FB_Bacnet.StartStopStatus_226.bPresVal;
aUnits[13].sUnitName := 'F55-13 (3-02)';
aUnits[14].bPresVal := FB_Bacnet.StartStopStatus_227.bPresVal;
aUnits[14].sUnitName := 'F55-14 (3-03)';
aUnits[15].bPresVal := FB_Bacnet.StartStopStatus_228.bPresVal;
aUnits[15].sUnitName := 'F55-15 (3-04)';
aUnits[16].bPresVal := FB_Bacnet.StartStopStatus_229.bPresVal;
aUnits[16].sUnitName := 'F55-16 (3-05)';
aUnits[17].bPresVal := FB_Bacnet.StartStopStatus_230.bPresVal;
aUnits[17].sUnitName := 'F55-17 (3-06)';
aUnits[18].bPresVal := FB_Bacnet.StartStopStatus_231.bPresVal;
aUnits[18].sUnitName := 'F55-18 (3-07)';
aUnits[19].bPresVal := FB_Bacnet.StartStopStatus_232.bPresVal;
aUnits[19].sUnitName := 'F55-19 (3-08)';
aUnits[20].bPresVal := FB_Bacnet.StartStopStatus_233.bPresVal;
aUnits[20].sUnitName := 'F55-20 (3-09)';
aUnits[21].bPresVal := FB_Bacnet.StartStopStatus_238.bPresVal;
aUnits[21].sUnitName := 'F55-Lobi (3-14)';

FOR i := 1 TO 21 DO
    stUnit := aUnits[i];

    // Detect ON/OFF state change
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        // --------------------------------------------------------
        // (a) Send TwinCAT message as before
        // --------------------------------------------------------
        IF aUnits[i].bPresVal THEN
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned ON');
        ELSE
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned OFF');
        END_IF

        fbMsg.CreateEx(TC_EVENTS.UnitPowerStatus.EventPowerStatus, 0);
        fbMsg.ipArguments.AddString(sMsgText);
        fbMsg.Send(0);

        // --------------------------------------------------------
        // (b) Push event to global CSV queue (for P_CSVWrite_TextMode)
        // --------------------------------------------------------
        IF g_iCount < g_CSV_BUF_SIZE THEN
            g_aUnitName[g_iWriteIdx] := stUnit.sUnitName;
            g_aState[g_iWriteIdx]    := aUnits[i].bPresVal;
            g_iWriteIdx := g_iWriteIdx + 1;
            IF g_iWriteIdx > g_CSV_BUF_SIZE THEN g_iWriteIdx := 1; END_IF
            g_iCount := g_iCount + 1;
        END_IF

        // --------------------------------------------------------
        // (c) Update previous state
        // --------------------------------------------------------
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR

// ------------------------------------------------------------
// Optional debug info
// ------------------------------------------------------------
sDebug := CONCAT('Queued=', INT_TO_STRING(g_iCount));
]]></ST>
    </Implementation>
    <LineIds Name="FB_EventF55">
      <LineId Id="189" Count="57" />
      <LineId Id="148" Count="0" />
      <LineId Id="62" Count="7" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>