<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventFMZ2" Id="{c95ee243-04a3-4807-ae16-2a2489f80775}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventFMZ2
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_1;
END_VAR
VAR_OUTPUT
	sDebug : STRING(200);
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..8] OF AC_Unit_Status;
	stUnit   : AC_Unit_Status;
	i: INT;
	sMsgText: STRING;

END_VAR
VAR RETAIN
	aPrevState : ARRAY[1..8] OF BOOL := [FALSE(*8*)];
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_096.bPresVal;
aUnits[1].sUnitName := 'FMZ-PC-1 (3-00)';
aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_097.bPresVal;
aUnits[2].sUnitName := 'FMZ-PC-2 (3-01)';
aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_098.bPresVal;
aUnits[3].sUnitName := 'FMZ-PC-3 (3-02)';
aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_099.bPresVal;
aUnits[4].sUnitName := 'FMZ-PC-4 (3-03)';
aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_100.bPresVal;
aUnits[5].sUnitName := 'FMZ-PC-5 (3-04)';
aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_101.bPresVal;
aUnits[6].sUnitName := 'FMZ-PC-6 (3-05)';
aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_102.bPresVal;
aUnits[7].sUnitName := 'FMZ-PC-7 (3-06)';
aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_103.bPresVal;
aUnits[8].sUnitName := 'FMZ-PC-8 (3-07)';

FOR i := 1 TO 8 DO
    stUnit := aUnits[i];

    // Detect ON/OFF state change
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        // --------------------------------------------------------
        // (a) Send TwinCAT message as before
        // --------------------------------------------------------
        IF aUnits[i].bPresVal THEN
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned ON');
        ELSE
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned OFF');
        END_IF

        fbMsg.CreateEx(TC_EVENTS.UnitPowerStatus.EventPowerStatus, 0);
        fbMsg.ipArguments.AddString(sMsgText);
        fbMsg.Send(0);

        // --------------------------------------------------------
        // (b) Push event to global CSV queue (for P_CSVWrite_TextMode)
        // --------------------------------------------------------
        IF g_iCount < g_CSV_BUF_SIZE THEN
            g_aUnitName[g_iWriteIdx] := stUnit.sUnitName;
            g_aState[g_iWriteIdx]    := aUnits[i].bPresVal;
            g_iWriteIdx := g_iWriteIdx + 1;
            IF g_iWriteIdx > g_CSV_BUF_SIZE THEN g_iWriteIdx := 1; END_IF
            g_iCount := g_iCount + 1;
        END_IF

        // --------------------------------------------------------
        // (c) Update previous state
        // --------------------------------------------------------
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR

// ------------------------------------------------------------
// Optional debug info
// ------------------------------------------------------------
sDebug := CONCAT('Queued=', INT_TO_STRING(g_iCount));
]]></ST>
    </Implementation>
    <LineIds Name="FB_EventFMZ2">
      <LineId Id="9" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="52" Count="0" />
      <LineId Id="10" Count="5" />
      <LineId Id="53" Count="0" />
      <LineId Id="17" Count="1" />
      <LineId Id="54" Count="1" />
      <LineId Id="21" Count="30" />
      <LineId Id="94" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="101" Count="5" />
    </LineIds>
  </POU>
</TcPlcObject>