<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventFPH2" Id="{9ef75778-9431-4557-bcc0-be845f101c95}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventFPH2
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_10;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..9] OF AC_Unit_Status;
	stUnit   : AC_Unit_Status;
	i: INT;
	sMsgText: STRING;
	triggerTest : BOOL;
END_VAR
VAR RETAIN
	aPrevState : ARRAY[1..9] OF BOOL := [FALSE(*9*)];
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_156.bPresVal;
aUnits[1].sUnitName := 'FPH2-1 (2-12)';
aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_157.bPresVal;
aUnits[2].sUnitName := 'FPH2-2 (2-13)';
aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_158.bPresVal;
aUnits[3].sUnitName := 'FPH2-3 (2-14)';
aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_159.bPresVal;
aUnits[4].sUnitName := 'FPH2-4 (2-15)';
aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_160.bPresVal;
aUnits[5].sUnitName := 'FPH2-5 (3-00)';
aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_161.bPresVal;
aUnits[6].sUnitName := 'FPH2-6 (3-01)';
aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_162.bPresVal;
aUnits[7].sUnitName := 'FPH2-7 (3-02)';
aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_163.bPresVal;
aUnits[8].sUnitName := 'FPH2-8 (3-03)';
aUnits[9].bPresVal := FB_Bacnet.StartStopStatus_164.bPresVal;
aUnits[9].sUnitName := 'FPH2-9 (3-04)';

FOR i := 1 TO 9 DO
	stUnit := aUnits[i]; // extract the structure instance
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        IF aUnits[i].bPresVal THEN
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned ON');
        ELSE
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned OFF');
        END_IF
		fbMsg.CreateEx(TC_EVENTS.UnitPowerStatus.EventPowerStatus, 0);
		fbMsg.ipArguments.AddString(sMsgText);
		fbMsg.Send(0);
		
        // Update previous state
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="FB_EventFPH2">
      <LineId Id="189" Count="29" />
    </LineIds>
  </POU>
</TcPlcObject>