<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventF16" Id="{e94244d2-f963-4280-9085-9a0fb6140f71}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventF16
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_4;
  FB_Bacnet_b : FB_BACnet_DAIKIN_MasterStation_III_No_5;
END_VAR
VAR_OUTPUT
	sDebug : STRING(200);
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..21] OF AC_Unit_Status;
	stUnit   : AC_Unit_Status;
	i: INT;
	sMsgText: STRING;
END_VAR
VAR RETAIN
	aPrevState : ARRAY[1..21] OF BOOL := [FALSE(*21*)];
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_064.bPresVal;
aUnits[1].sUnitName := 'F16-A1 (1-00)';
aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_065.bPresVal;
aUnits[2].sUnitName := 'F16-A2 (1-01)';
aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_066.bPresVal;
aUnits[3].sUnitName := 'F16-A3 (1-02)';
aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_067.bPresVal;
aUnits[4].sUnitName := 'F16-A4 (1-03)';
aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_068.bPresVal;
aUnits[5].sUnitName := 'F16-B1 (1-04)';
aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_069.bPresVal;
aUnits[6].sUnitName := 'F16-B2 (1-05)';
aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_070.bPresVal;
aUnits[7].sUnitName := 'F16-C1 (1-06)';
aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_071.bPresVal;
aUnits[8].sUnitName := 'F16-C2 (1-07)';
aUnits[9].bPresVal := FB_Bacnet.StartStopStatus_072.bPresVal;
aUnits[9].sUnitName := 'F16-D1 (1-08)';
aUnits[10].bPresVal := FB_Bacnet.StartStopStatus_073.bPresVal;
aUnits[10].sUnitName := 'F16-D2 (1-09)';
aUnits[11].bPresVal := FB_Bacnet.StartStopStatus_074.bPresVal;
aUnits[11].sUnitName := 'F16-D3 (1-10)';
aUnits[12].bPresVal := FB_Bacnet.StartStopStatus_075.bPresVal;
aUnits[12].sUnitName := 'F16-D4 (1-11)';
aUnits[13].bPresVal := FB_Bacnet.StartStopStatus_076.bPresVal;
aUnits[13].sUnitName := 'F16-E1 (1-12)';
aUnits[14].bPresVal := FB_Bacnet.StartStopStatus_077.bPresVal;
aUnits[14].sUnitName := 'F16-E2 (1-13)';
aUnits[15].bPresVal := FB_Bacnet.StartStopStatus_078.bPresVal;
aUnits[15].sUnitName := 'F16-E3 (1-14)';
aUnits[16].bPresVal := FB_Bacnet.StartStopStatus_079.bPresVal;
aUnits[16].sUnitName := 'F16-F1 (1-15)';
aUnits[17].bPresVal := FB_Bacnet.StartStopStatus_080.bPresVal;
aUnits[17].sUnitName := 'F16-F2 (2-00)';
aUnits[18].bPresVal := FB_Bacnet.StartStopStatus_081.bPresVal;
aUnits[18].sUnitName := 'F16-G1 (2-01)';
aUnits[19].bPresVal := FB_Bacnet.StartStopStatus_082.bPresVal;
aUnits[19].sUnitName := 'F16-G2 (2-02)';
aUnits[20].bPresVal := FB_Bacnet.StartStopStatus_083.bPresVal;
aUnits[20].sUnitName := 'F16-H (2-03)';
aUnits[21].bPresVal := FB_Bacnet_b.StartStopStatus_033.bPresVal;
aUnits[21].sUnitName := 'F16-Lobi (3-01)';

FOR i := 1 TO 21 DO
    stUnit := aUnits[i];

    // Detect ON/OFF state change
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        // --------------------------------------------------------
        // (a) Send TwinCAT message as before
        // --------------------------------------------------------
        IF aUnits[i].bPresVal THEN
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned ON');
        ELSE
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned OFF');
        END_IF

        fbMsg.CreateEx(TC_EVENTS.UnitPowerStatus.EventPowerStatus, 0);
        fbMsg.ipArguments.AddString(sMsgText);
        fbMsg.Send(0);

        // --------------------------------------------------------
        // (b) Push event to global CSV queue (for P_CSVWrite_TextMode)
        // --------------------------------------------------------
        IF g_iCount < g_CSV_BUF_SIZE THEN
            g_aUnitName[g_iWriteIdx] := stUnit.sUnitName;
            g_aState[g_iWriteIdx]    := aUnits[i].bPresVal;
            g_iWriteIdx := g_iWriteIdx + 1;
            IF g_iWriteIdx > g_CSV_BUF_SIZE THEN g_iWriteIdx := 1; END_IF
            g_iCount := g_iCount + 1;
        END_IF

        // --------------------------------------------------------
        // (c) Update previous state
        // --------------------------------------------------------
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR

// ------------------------------------------------------------
// Optional debug info
// ------------------------------------------------------------
sDebug := CONCAT('Queued=', INT_TO_STRING(g_iCount));
]]></ST>
    </Implementation>
    <LineIds Name="FB_EventF16">
      <LineId Id="9" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="52" Count="0" />
      <LineId Id="10" Count="5" />
      <LineId Id="53" Count="0" />
      <LineId Id="17" Count="1" />
      <LineId Id="54" Count="1" />
      <LineId Id="21" Count="30" />
      <LineId Id="94" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="101" Count="5" />
      <LineId Id="147" Count="2" />
      <LineId Id="161" Count="0" />
      <LineId Id="65" Count="1" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>