<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventF31" Id="{6a84eb1b-f47e-4640-b199-2ac12edc6817}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventF31
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_8;
END_VAR
VAR_OUTPUT
	sDebug : STRING(200);
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..24] OF AC_Unit_Status;
	stUnit   : AC_Unit_Status;
	i: INT;
	sMsgText: STRING;

END_VAR
VAR RETAIN
	aPrevState : ARRAY[1..24] OF BOOL := [FALSE(*24*)];
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_000.bPresVal;
aUnits[1].sUnitName := 'F31-A1 (1-00)';
aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_001.bPresVal;
aUnits[2].sUnitName := 'F31-A2 (1-01)';
aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_002.bPresVal;
aUnits[3].sUnitName := 'F31-A3 (1-02)';
aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_003.bPresVal;
aUnits[4].sUnitName := 'F31-B1 (1-03)';
aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_004.bPresVal;
aUnits[5].sUnitName := 'F31-B2 (1-04)';
aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_005.bPresVal;
aUnits[6].sUnitName := 'F31-C1 (1-05)';
aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_006.bPresVal;
aUnits[7].sUnitName := 'F31-C2 (1-06)';
aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_007.bPresVal;
aUnits[8].sUnitName := 'F31-C3 (1-07)';
aUnits[9].bPresVal := FB_Bacnet.StartStopStatus_008.bPresVal;
aUnits[9].sUnitName := 'F31-C4 (1-08)';
aUnits[10].bPresVal := FB_Bacnet.StartStopStatus_009.bPresVal;
aUnits[10].sUnitName := 'F31-C5 (1-09)';
aUnits[11].bPresVal := FB_Bacnet.StartStopStatus_010.bPresVal;
aUnits[11].sUnitName := 'F31-D1 (1-10)';
aUnits[12].bPresVal := FB_Bacnet.StartStopStatus_011.bPresVal;
aUnits[12].sUnitName := 'F31-D2 (1-11)';
aUnits[13].bPresVal := FB_Bacnet.StartStopStatus_012.bPresVal;
aUnits[13].sUnitName := 'F31-D3 (1-12)';
aUnits[14].bPresVal := FB_Bacnet.StartStopStatus_013.bPresVal;
aUnits[14].sUnitName := 'F31-D4 (1-13)';
aUnits[15].bPresVal := FB_Bacnet.StartStopStatus_014.bPresVal;
aUnits[15].sUnitName := 'F31-E1 (1-14)';
aUnits[16].bPresVal := FB_Bacnet.StartStopStatus_015.bPresVal;
aUnits[16].sUnitName := 'F31-E2 (1-15)';
aUnits[17].bPresVal := FB_Bacnet.StartStopStatus_016.bPresVal;
aUnits[17].sUnitName := 'F31-F1 (2-00)';
aUnits[18].bPresVal := FB_Bacnet.StartStopStatus_017.bPresVal;
aUnits[18].sUnitName := 'F31-F2 (2-01)';
aUnits[19].bPresVal := FB_Bacnet.StartStopStatus_018.bPresVal;
aUnits[19].sUnitName := 'F31-G1 (2-02)';
aUnits[20].bPresVal := FB_Bacnet.StartStopStatus_019.bPresVal;
aUnits[20].sUnitName := 'F31-G2 (2-03)';
aUnits[21].bPresVal := FB_Bacnet.StartStopStatus_020.bPresVal;
aUnits[21].sUnitName := 'F31-G3 (2-04)';
//aUnits[22].bPresVal := FB_Bacnet.StartStopStatus_048.bPresVal;
//aUnits[22].sUnitName := 'F31-IT-1 (4-00)';
aUnits[23].bPresVal := FB_Bacnet.StartStopStatus_241.bPresVal;
aUnits[23].sUnitName := 'F31-IT-2 (4-01)';
aUnits[24].bPresVal := FB_Bacnet.StartStopStatus_224.bPresVal;
aUnits[24].sUnitName := 'F31-Lobi (3-00)';

FOR i := 1 TO 24 DO
    stUnit := aUnits[i];

    // Detect ON/OFF state change
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        // --------------------------------------------------------
        // (a) Send TwinCAT message as before
        // --------------------------------------------------------
        IF aUnits[i].bPresVal THEN
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned ON');
        ELSE
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned OFF');
        END_IF

        fbMsg.CreateEx(TC_EVENTS.UnitPowerStatus.EventPowerStatus, 0);
        fbMsg.ipArguments.AddString(sMsgText);
        fbMsg.Send(0);

        // --------------------------------------------------------
        // (b) Push event to global CSV queue (for P_CSVWrite_TextMode)
        // --------------------------------------------------------
        IF g_iCount < g_CSV_BUF_SIZE THEN
            g_aUnitName[g_iWriteIdx] := stUnit.sUnitName;
            g_aState[g_iWriteIdx]    := aUnits[i].bPresVal;
            g_iWriteIdx := g_iWriteIdx + 1;
            IF g_iWriteIdx > g_CSV_BUF_SIZE THEN g_iWriteIdx := 1; END_IF
            g_iCount := g_iCount + 1;
        END_IF

        // --------------------------------------------------------
        // (c) Update previous state
        // --------------------------------------------------------
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR

// ------------------------------------------------------------
// Optional debug info
// ------------------------------------------------------------
sDebug := CONCAT('Queued=', INT_TO_STRING(g_iCount));
]]></ST>
    </Implementation>
    <LineIds Name="FB_EventF31">
      <LineId Id="189" Count="57" />
      <LineId Id="148" Count="0" />
      <LineId Id="62" Count="5" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>