<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventF35" Id="{6b188b48-b9e6-4eee-b08a-9caa9760ab81}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventF35
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_8;
END_VAR
VAR_OUTPUT
	sDebug : STRING(200);
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..25] OF AC_Unit_Status;
	stUnit   : AC_Unit_Status;
	i: INT;
	sMsgText: STRING;

END_VAR
VAR RETAIN
	aPrevState : ARRAY[1..25] OF BOOL := [FALSE(*25*)];
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_192.bPresVal;
aUnits[1].sUnitName := 'F35-A1 (1-00)';
aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_193.bPresVal;
aUnits[2].sUnitName := 'F35-A2 (1-01)';
aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_194.bPresVal;
aUnits[3].sUnitName := 'F35-A3 (1-02)';
aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_195.bPresVal;
aUnits[4].sUnitName := 'F35-B1 (1-03)';
aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_196.bPresVal;
aUnits[5].sUnitName := 'F35-B2 (1-04)';
aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_197.bPresVal;
aUnits[6].sUnitName := 'F35-C1 (1-05)';
aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_198.bPresVal;
aUnits[7].sUnitName := 'F35-C2 (1-06)';
aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_199.bPresVal;
aUnits[8].sUnitName := 'F35-C3 (1-07)';
aUnits[9].bPresVal := FB_Bacnet.StartStopStatus_200.bPresVal;
aUnits[9].sUnitName := 'F35-C4 (1-08)';
aUnits[10].bPresVal := FB_Bacnet.StartStopStatus_201.bPresVal;
aUnits[10].sUnitName := 'F35-C5 (1-09)';
aUnits[11].bPresVal := FB_Bacnet.StartStopStatus_202.bPresVal;
aUnits[11].sUnitName := 'F35-D1 (1-10)';
aUnits[12].bPresVal := FB_Bacnet.StartStopStatus_203.bPresVal;
aUnits[12].sUnitName := 'F35-D2 (1-11)';
aUnits[13].bPresVal := FB_Bacnet.StartStopStatus_204.bPresVal;
aUnits[13].sUnitName := 'F35-D3 (1-12)';
aUnits[14].bPresVal := FB_Bacnet.StartStopStatus_205.bPresVal;
aUnits[14].sUnitName := 'F35-D4 (1-13)';
aUnits[15].bPresVal := FB_Bacnet.StartStopStatus_206.bPresVal;
aUnits[15].sUnitName := 'F35-E1 (1-14)';
aUnits[16].bPresVal := FB_Bacnet.StartStopStatus_207.bPresVal;
aUnits[16].sUnitName := 'F35-E2 (1-15)';
aUnits[17].bPresVal := FB_Bacnet.StartStopStatus_208.bPresVal;
aUnits[17].sUnitName := 'F35-F1 (2-00)';
aUnits[18].bPresVal := FB_Bacnet.StartStopStatus_209.bPresVal;
aUnits[18].sUnitName := 'F35-F2 (2-01)';
aUnits[19].bPresVal := FB_Bacnet.StartStopStatus_210.bPresVal;
aUnits[19].sUnitName := 'F35-F3 (2-02)';
aUnits[20].bPresVal := FB_Bacnet.StartStopStatus_211.bPresVal;
aUnits[20].sUnitName := 'F35-F4 (2-03)';
aUnits[21].bPresVal := FB_Bacnet.StartStopStatus_212.bPresVal;
aUnits[21].sUnitName := 'F35-F5 (2-04)';
aUnits[22].bPresVal := FB_Bacnet.StartStopStatus_213.bPresVal;
aUnits[22].sUnitName := 'F35-F6 (2-05)';
//aUnits[23].bPresVal := FB_Bacnet.StartStopStatus_242.bPresVal;
//aUnits[23].sUnitName := 'F35-IT-1 (4-02)';
aUnits[24].bPresVal := FB_Bacnet.StartStopStatus_243.bPresVal;
aUnits[24].sUnitName := 'F35-IT-2 (4-03)';
aUnits[25].bPresVal := FB_Bacnet.StartStopStatus_227.bPresVal;
aUnits[25].sUnitName := 'F35-Lobi (3-03)';

FOR i := 1 TO 25 DO
    stUnit := aUnits[i];

    // Detect ON/OFF state change
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        // --------------------------------------------------------
        // (a) Send TwinCAT message as before
        // --------------------------------------------------------
        IF aUnits[i].bPresVal THEN
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned ON');
        ELSE
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned OFF');
        END_IF

        fbMsg.CreateEx(TC_EVENTS.UnitPowerStatus.EventPowerStatus, 0);
        fbMsg.ipArguments.AddString(sMsgText);
        fbMsg.Send(0);

        // --------------------------------------------------------
        // (b) Push event to global CSV queue (for P_CSVWrite_TextMode)
        // --------------------------------------------------------
        IF g_iCount < g_CSV_BUF_SIZE THEN
            g_aUnitName[g_iWriteIdx] := stUnit.sUnitName;
            g_aState[g_iWriteIdx]    := aUnits[i].bPresVal;
            g_iWriteIdx := g_iWriteIdx + 1;
            IF g_iWriteIdx > g_CSV_BUF_SIZE THEN g_iWriteIdx := 1; END_IF
            g_iCount := g_iCount + 1;
        END_IF

        // --------------------------------------------------------
        // (c) Update previous state
        // --------------------------------------------------------
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR

// ------------------------------------------------------------
// Optional debug info
// ------------------------------------------------------------
sDebug := CONCAT('Queued=', INT_TO_STRING(g_iCount));
]]></ST>
    </Implementation>
    <LineIds Name="FB_EventF35">
      <LineId Id="189" Count="57" />
      <LineId Id="148" Count="0" />
      <LineId Id="62" Count="7" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>