<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="FB_EventF36" Id="{d009e946-56b5-473f-8187-cad2050117a7}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EventF36
VAR_INPUT
	FB_Bacnet : FB_BACnet_DAIKIN_MasterStation_III_No_9;
END_VAR
VAR_OUTPUT
	sDebug : STRING(200);
END_VAR
VAR
	fbMsg : FB_TcMessage;
	aUnits : ARRAY[1..23] OF AC_Unit_Status;
	stUnit   : AC_Unit_Status;
	i: INT;
	sMsgText: STRING;

END_VAR
VAR RETAIN
	aPrevState : ARRAY[1..23] OF BOOL := [FALSE(*23*)];
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
aUnits[1].bPresVal := FB_Bacnet.StartStopStatus_000.bPresVal;
aUnits[1].sUnitName := 'F36-A1 (1-00)';
aUnits[2].bPresVal := FB_Bacnet.StartStopStatus_001.bPresVal;
aUnits[2].sUnitName := 'F36-A2 (1-01)';
aUnits[3].bPresVal := FB_Bacnet.StartStopStatus_002.bPresVal;
aUnits[3].sUnitName := 'F36-A3 (1-02)';
aUnits[4].bPresVal := FB_Bacnet.StartStopStatus_003.bPresVal;
aUnits[4].sUnitName := 'F36-B1 (1-03)';
aUnits[5].bPresVal := FB_Bacnet.StartStopStatus_004.bPresVal;
aUnits[5].sUnitName := 'F36-B2 (1-04)';
aUnits[6].bPresVal := FB_Bacnet.StartStopStatus_005.bPresVal;
aUnits[6].sUnitName := 'F36-C1 (1-05)';
aUnits[7].bPresVal := FB_Bacnet.StartStopStatus_006.bPresVal;
aUnits[7].sUnitName := 'F36-C2 (1-06)';
aUnits[8].bPresVal := FB_Bacnet.StartStopStatus_007.bPresVal;
aUnits[8].sUnitName := 'F36-C3 (1-07)';
aUnits[9].bPresVal := FB_Bacnet.StartStopStatus_008.bPresVal;
aUnits[9].sUnitName := 'F36-C4 (1-08)';
aUnits[10].bPresVal := FB_Bacnet.StartStopStatus_009.bPresVal;
aUnits[10].sUnitName := 'F36-C5 (1-09)';
aUnits[11].bPresVal := FB_Bacnet.StartStopStatus_010.bPresVal;
aUnits[11].sUnitName := 'F36-D1 (1-10)';
aUnits[12].bPresVal := FB_Bacnet.StartStopStatus_011.bPresVal;
aUnits[12].sUnitName := 'F36-D2 (1-11)';
aUnits[13].bPresVal := FB_Bacnet.StartStopStatus_012.bPresVal;
aUnits[13].sUnitName := 'F36-D3 (1-12)';
aUnits[14].bPresVal := FB_Bacnet.StartStopStatus_013.bPresVal;
aUnits[14].sUnitName := 'F36-D4 (1-13)';
aUnits[15].bPresVal := FB_Bacnet.StartStopStatus_014.bPresVal;
aUnits[15].sUnitName := 'F36-E1 (1-14)';
aUnits[16].bPresVal := FB_Bacnet.StartStopStatus_015.bPresVal;
aUnits[16].sUnitName := 'F36-E2 (1-15)';
aUnits[17].bPresVal := FB_Bacnet.StartStopStatus_016.bPresVal;
aUnits[17].sUnitName := 'F36-F1 (2-00)';
aUnits[18].bPresVal := FB_Bacnet.StartStopStatus_017.bPresVal;
aUnits[18].sUnitName := 'F36-F2 (2-01)';
aUnits[19].bPresVal := FB_Bacnet.StartStopStatus_018.bPresVal;
aUnits[19].sUnitName := 'F36-F3 (2-02)';
aUnits[20].bPresVal := FB_Bacnet.StartStopStatus_019.bPresVal;
aUnits[20].sUnitName := 'F36-F4 (2-03)';
aUnits[21].bPresVal := FB_Bacnet.StartStopStatus_020.bPresVal;
aUnits[21].sUnitName := 'F36-F5 (2-04)';
aUnits[22].bPresVal := FB_Bacnet.StartStopStatus_021.bPresVal;
aUnits[22].sUnitName := 'F36-F6 (2-05)';
aUnits[23].bPresVal := FB_Bacnet.StartStopStatus_224.bPresVal;
aUnits[23].sUnitName := 'F36-Lobi (3-00)';

FOR i := 1 TO 23 DO
    stUnit := aUnits[i];

    // Detect ON/OFF state change
    IF aUnits[i].bPresVal <> aPrevState[i] THEN
        // --------------------------------------------------------
        // (a) Send TwinCAT message as before
        // --------------------------------------------------------
        IF aUnits[i].bPresVal THEN
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned ON');
        ELSE
            sMsgText := CONCAT(stUnit.sUnitName, ' is Turned OFF');
        END_IF

        fbMsg.CreateEx(TC_EVENTS.UnitPowerStatus.EventPowerStatus, 0);
        fbMsg.ipArguments.AddString(sMsgText);
        fbMsg.Send(0);

        // --------------------------------------------------------
        // (b) Push event to global CSV queue (for P_CSVWrite_TextMode)
        // --------------------------------------------------------
        IF g_iCount < g_CSV_BUF_SIZE THEN
            g_aUnitName[g_iWriteIdx] := stUnit.sUnitName;
            g_aState[g_iWriteIdx]    := aUnits[i].bPresVal;
            g_iWriteIdx := g_iWriteIdx + 1;
            IF g_iWriteIdx > g_CSV_BUF_SIZE THEN g_iWriteIdx := 1; END_IF
            g_iCount := g_iCount + 1;
        END_IF

        // --------------------------------------------------------
        // (c) Update previous state
        // --------------------------------------------------------
        aPrevState[i] := aUnits[i].bPresVal;
    END_IF
END_FOR

// ------------------------------------------------------------
// Optional debug info
// ------------------------------------------------------------
sDebug := CONCAT('Queued=', INT_TO_STRING(g_iCount));
]]></ST>
    </Implementation>
    <LineIds Name="FB_EventF36">
      <LineId Id="189" Count="57" />
      <LineId Id="148" Count="0" />
      <LineId Id="62" Count="7" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>